package com.gymbro.utils;

public class UnknownGymException extends RuntimeException{
    public UnknownGymException(String message){
        super(message);
    }
}
