package com.gymbro.utils;

public class WriteFileException extends RuntimeException {
    public WriteFileException(String message){
        super(message);
    }
}
